// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvalidatedActions.set set Invalidated false 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": false,
    "modifiedTimestamp": "2017-10-27T18:13:41.455Z",
    "type": "SET_INVALIDATED",
    "userName": "mannycolon",
  },
]
`;

exports[`InvalidatedActions.set set Invalidated true 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": true,
    "modifiedTimestamp": "2017-10-27T18:13:41.455Z",
    "type": "SET_INVALIDATED",
    "userName": "mannycolon",
  },
]
`;

exports[`InvalidatedActions.setInvalidated set Invalidated false 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": false,
    "type": "SET_INVALIDATED",
    "userName": "mannycolon",
  },
  Object {
    "boolean": false,
    "contextId": Object {
      "groupId": "authority",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`InvalidatedActions.setInvalidated set Invalidated true 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "mannycolon",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "authority",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;
